# ipt

./: CMakeLists.txt  README.md  TODO.txt
aux/: CMakeLists.txt
aux/glare-paint/: CMakeLists.txt  main.cpp  pch.h
include/: randf.h
src/: CMakeLists.txt  CollectionLighting.cpp  CollectionLighting.h  GeometryFloor.cpp  GeometryFloor.h  GeometryOpenSpheres.cpp  GeometryOpenSpheres.h  GeometrySphereInBox.cpp  GeometrySphereInBox.h  GridRenderPlane.cpp  GridRenderPlane.h  LightingImpl.cpp  LightingImpl.h  SimpleCamera.cpp  SimpleCamera.h  algebra_test.cpp  ddf.h  geometric_utils.cpp  geometry.cpp  geometry.h  gui.cpp  gui.h  ipt.cpp  lighting.cpp  lighting.h  main.cpp  pch.h  randf.cpp  randf.h  sample_scenes.cpp  sample_scenes.h  sampling.cpp  sampling.h  sampling_detail.h  sampling_fwd.h  sampling_magic.cpp  tracer_interfaces.h  wrap_test.cpp
src/geometry/: CMakeLists.txt  FractalSpheres.cpp  FractalSpheres.h  GeometryCorner.cpp  GeometryCorner.h  GeometryFloor.cpp  GeometryFloor.h  GeometryOpenSpheres.cpp  GeometryOpenSpheres.h  GeometrySmallPt.cpp  GeometrySmallPt.h  GeometrySphereInBox.cpp  GeometrySphereInBox.h  geometric_utils.cpp  geometric_utils.h
src/libcatch2/: CMakeLists.txt
src/libddf/: CMakeLists.txt  check_ddf.cpp  check_ddf.h  ddf.cpp  ddf.h  ddf_detail.h  test_ddf.cpp
src/lighting/: CMakeLists.txt  lighting.cpp  lighting.h  test_lighting.cpp
src/sampling/: CMakeLists.txt  check_ddf.cpp  check_ddf.h  ddf.h  sampling.cpp  sampling.h  test_sampling.cpp
test/: CMakeLists.txt  check_ddf.cpp  check_ddf.h  test_main.cpp
